# rp_kernel

./: .CONTRIBUTING.md.kate-swp  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  RULES.md
include/: rp_i_plugin.h  rp_plugin.h  rp_types.h
